k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: new-lake
  labels:
    name: new-lake
