k8s/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-lake-api
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: new-lake-api  
  replicas: 1
  template:
    metadata:
      labels:
        app: new-lake-api  
    spec:      
      containers:
      - name: new-lake-api
        image: new-lake-api:1.0.0-alpha
        readinessProbe:
          httpGet:
            path: /health/readiness
            port: 5001
          initialDelaySeconds: 10
          timeoutSeconds: 30
          periodSeconds: 60
          successThreshold: 1
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /health/liveness
            port: 5001
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 3      
        ports:
        - containerPort: 5001
        - containerPort: 5002
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        imagePullPolicy: Never        
---
apiVersion: v1
kind: Service
metadata:
  name: new-lake-api-service
spec:
  selector:
    app: new-lake-api
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http-unsecured
      port: 5001
      targetPort: 5001

---
apiVersion: v1
kind: Service
metadata:
  name: new-lake-grpc-api-service
spec:
  selector:
    app: new-lake-api
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http2-grpc
      port: 5002
      targetPort: 5002
