k8s/new-lake-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-lake-api  
spec:
  selector:
    matchLabels:
      app: new-lake-api
  replicas: 1
  template:
    metadata:
      labels:
        app: new-lake-api
    spec:
      containers:
      - name: new-lake-api
        image: new-lake-api:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        imagePullPolicy: Never

---
apiVersion: v1
kind: Service
metadata:
  name: new-lake-api-service
spec:
  selector:
    app: new-lake-api  
  type: NodePort
  ports:
    - protocol: TCP 
      name: http-unsecured
      port: 80
      targetPort: 80      
      nodePort: 31505
