k8s/new-lake-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-lake-api-deployment
  labels:
    app: new-lake-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: new-lake-api
  template:
    metadata:
      labels:
        app: new-lake-api
    spec:
      containers:
      - name: new-lake-api
        image: new-lake-api:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        imagePullPolicy: Never
        

---
apiVersion: v1
kind: Service
metadata:
  name: new-lake-api-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: new-lake-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31880
