k8s/new-lake-grpc-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-lake-grpc-server  
spec:
  selector:
    matchLabels:
      app: new-lake-grpc-server
  replicas: 1
  template:
    metadata:
      labels:
        app: new-lake-grpc-server
    spec:
      containers:
      - name: new-lake-grpc-server
        image: new-lake-grpc-server:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        imagePullPolicy: Never

---
apiVersion: v1
kind: Service
metadata:
  name: new-lake-grpc-service
spec:
  selector:
    app: new-lake-grpc-server
  clusterIP: None
