k8s/queue-listener.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-lake-queue-listener  
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: new-lake-queue-listener
  replicas: 1
  template:
    metadata:
      labels:
        app: new-lake-queue-listener
    spec:
      containers:
      - name: new-lake-queue-listener
        image: new-lake-queue-listener:1.0.0-alpha
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        imagePullPolicy: Never

---
apiVersion: v1
kind: Service
metadata:
  name: new-lake-queue-listener-service
spec:
  selector:
    app: new-lake-queue-listener
  clusterIP: None
