k8s/rabbitmq-deploy.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: rabbitmq
  name: rabbitmq
spec:
  containers:
  - image: rabbitmq:management
    name: rabbitmq
    ports:
    - containerPort: 15672
    - containerPort: 5672
    resources: {}
    
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    run: rabbitmq
  ports:
  - port: 15672
    name: mgmtport
    protocol: TCP
    targetPort: 15672
  - port: 5672
    name: ingressport
    protocol: TCP
    targetPort: 5672
