k8s/redis-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        imagePullPolicy: Always        

---
apiVersion: v1
kind: Service
metadata:
  name: local-redis
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
