k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-lake-ingress
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx     

  rules:  
  - host: localhost
    http:
      paths:      
      - pathType: Prefix
        path: /
        backend:
          service:
            name: new-lake-api-service
            port: 
              number: 80
